test/files/neg/t7757a.check
t7757a.scala:1: error: ';' expected but '@' found.
trait Foo @annot
          ^
one error found
